--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -2,6 +2,7 @@
 import '../styles/global.css';
 
 interface Props {
+  id?: string;
   href?: string;
   onClick?: string;
   type?: 'link' | 'button' | 'textual' | 'textual-button';
@@ -12,6 +13,7 @@ interface Props {
 }
 
 const { 
+  id,
   href, 
   onClick, 
   type = 'button', 
