--- a/src/components/ButtonGroup.astro
+++ b/src/components/ButtonGroup.astro
@@ -25,7 +25,7 @@ const { buttons } = Astro.props;
 
 <style>
   .button-group {
-    @apply inline-flex p-1 bg-paper/60 border-2 border-white rounded-full shadow-sm text-sm font-medium;
+    @apply inline-flex p-1 bg-paper/60 border-2 border-white rounded-full shadow-sm shadow-inkLighter/20 text-sm font-medium;
   }
 
   .group-button {
@@ -37,6 +37,6 @@ const { buttons } = Astro.props;
   }
 
   .group-button.active {
-    @apply bg-paper text-inkDark shadow-md;
+    @apply bg-paper text-inkDark shadow-md shadow-inkLighter/50;
   }
 </style>
