--- a/src/layouts/ThoughtLayout.astro
+++ b/src/layouts/ThoughtLayout.astro
@@ -22,6 +22,7 @@ const breadcrumbs = [
 
 <Layout title={title}>
   <section class="w-full min-h-screen p-10 flex flex-col relative">
+    <section class="landscape"></section>
     <article class="prose prose-lg thoughts-container">
       <Breadcrumbs crumbs={breadcrumbs} />
       <header class="thoughts-header">
@@ -56,15 +57,15 @@ const breadcrumbs = [
       </section>
     </article>
   </section>
-  <section class="w-full h-20 bg-inkLighter fixed inset-0 mt-auto z-10">
-    test
-  </section>
 </Layout>
 
 
 <style>
+  .landscape {
+    @apply w-full h-52 fixed inset-0 mt-auto -bottom-4 z-0 bg-[url('/landscape-base.png')] bg-cover bg-bottom opacity-50 blur-[2px];
+  }
   .thoughts-container {
-    @apply mx-auto p-10 flex flex-col gap-10 w-full max-w-5xl h-full;
+    @apply mx-auto p-10 flex flex-col gap-10 w-full max-w-5xl h-full z-[1] bg-white/5 rounded-lg backdrop-blur-md;
   }
   .thoughts-header {
     @apply flex flex-col justify-center gap-5 text-center;
