--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -109,17 +109,19 @@ const tabsContent: TabContent[] = [
         //confetti: true
       }))}
     />
-    <div class="flex-1 min-h-[120px]">
-      {tabsContent.map(tab => (
-        <h2 id={tab.id} class={`section-content ${!tab.isDefault ? 'hidden' : ''}`}>
-          {tab.content.before}
-          <span class="highlight">{tab.content.highlight}</span>
-          {tab.content.after}
-        </h2>
-      ))}
-    </div>
-    <p>In my 10+ years of experience, I've helped startups evolve from ideas to fully fledged, thoughtfully crafted products. I have worked in Email Marketing, Ad Tech, HR and FinTech. Specializing in technical software, I work tirelessly to make the tedious simple while bringing joy in every pixel and line of code.</p>
-  </section>
+      <div class="bg-white/70 rounded-xl backdrop-blur p-6 flex flex-col gap-2 mt-6 shadow-md shadow-inkLighter/20">
+        <div class="flex-1 min-h-[120px]">
+          {tabsContent.map(tab => (
+            <h2 id={tab.id} class={`section-content ${!tab.isDefault ? 'hidden' : ''}`}>
+              {tab.content.before}
+              <span class="highlight">{tab.content.highlight}</span>
+              {tab.content.after}
+            </h2>
+          ))}
+        </div>
+        <p>In my 10+ years of experience, I've helped startups evolve from ideas to fully fledged, thoughtfully crafted products. I have worked in Email Marketing, Ad Tech, HR and FinTech. Specializing in technical software, I work tirelessly to make the tedious simple while bringing joy in every pixel and line of code.</p>
+      </div>
+    </section>
 </TwoColumnLayout>
 
 <style>
@@ -133,7 +135,7 @@ const tabsContent: TabContent[] = [
     @apply font-bold;
   }
   .section-content {
-    @apply text-ink font-medium text-xl mt-8;
+    @apply text-ink font-medium text-xl;
     transition: all 300ms ease-in-out;
   }
   .section-content.hidden {
