--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,7 +7,7 @@ import BackButton from '../components/BackButton.astro';
 <Layout title="Oops" body_classes="bg-[url('/clouds.png')] bg-cover bg-center">
   <section class="wrapper">
     <h1 class="text-8xl">404: Well Shoot</h1>
-    <p>My head might be in the clouds. Sorry to have I missled you.</p>
+    <p>My head might be in the clouds. Sorry to have missled you.</p>
     <div class="flex items-center my-10">
       <BackButton href="/" additionalClasses="ml-1 mr-2" />
       <Button type="textual" additionalClasses="text-ink text-base" href="/" id="backButton">
