--- a/src/components/MenuBubble.astro
+++ b/src/components/MenuBubble.astro
@@ -58,7 +58,7 @@ const navigationItems = [
         <li>Add search to entire site.</li>
         <li>Make clouds and images move in the background.</li>
         <li>Add dark mode support.</li>
-        <li>Build project for my daughter and I to take and store our daily selfies</li>
+        <li>Karina + L's Daily Selfie project</li>
       </ul>
     </div>
     <div class="footer-links">
